# git-repo

./: README.md  debug-repo.cabal
lib/Entities/: MyTable.hs
lib/Handlers/: UseMyTable.hs
lib/Queries/: MyTable.hs
