cabal-version:      3.0
name:               debug-repo
version:            0.1.0.0
author:             xave
maintainer:         theorem_03pistil@icloud.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wunused-packages

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:
        , Handlers.UseMyTable
        , Queries.MyTable
        , Entities.MyTable

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
      -- FlexibleInstances
      -- MultiParamTypeClasses
      -- TemplateHaskell
      -- OverloadedStrings
        -- ConstraintKinds
        -- DataKinds
        -- DeriveGeneric
        -- DerivingStrategies
        -- DerivingVia
        -- FlexibleContexts
        -- GeneralizedNewtypeDeriving
        -- InstanceSigs
        -- KindSignatures
        -- LambdaCase
        -- OverloadedLabels
        -- OverloadedStrings
        -- RecordWildCards
        -- ScopedTypeVariables
        -- TypeApplications
        -- TypeFamilies
        -- TypeOperators

    -- Other library packages from which modules are imported.
    build-depends:    
          base ^>=4.17.2.1
        , mtl ^>=2.2.2
        , opaleye ^>= 0.10.4.0
        , postgresql-simple ^>=0.7.0.0
        , product-profunctors ^>=0.11.1.1
        , resource-pool ^>=0.4.0.0
        , text ^>=2.0.2
        , time ^>=1.12.2
        , uuid ^>=1.3.16
        , wai ^>=3.2.4

    -- Directories containing source files.
    hs-source-dirs:   lib

    -- Base language which the package is written in.
    default-language: Haskell2010

executable debug-repo
    -- Import common warning flags.
    import:           warnings

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        , Handlers.UseMyTable
        , Queries.MyTable
        , Entities.MyTable

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        -- ConstraintKinds
        -- DataKinds
        -- DeriveGeneric
        -- DerivingStrategies
        -- DerivingVia
        -- FlexibleContexts
        -- FlexibleInstances
        -- GeneralizedNewtypeDeriving
        -- InstanceSigs
        -- KindSignatures
        -- LambdaCase
        -- MultiParamTypeClasses
        -- OverloadedLabels
        -- OverloadedStrings
        -- RecordWildCards
        -- ScopedTypeVariables
        -- TypeApplications
        -- TypeFamilies
        -- TypeOperators

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.17.2.1
        , base64-bytestring ^>=1.2.1.0
        , bytestring ^>=0.11.5.3
        , debug-repo
        , clientsession ^>=0.9.3.0
        , co-log ^>=0.6.1.0
        , co-log-core ^>=0.3.2.2
        , containers ^>=0.6.7
        , cookie ^>=0.5.0
        , http-types ^>=0.12.4
        , lucid2 ^>=0.0.20240424
        , mtl ^>=2.2.2
        , opaleye ^>= 0.10.4.0
        , postgresql-simple ^>=0.7.0.0
        , product-profunctors ^>=0.11.1.1
        , resource-pool ^>=0.4.0.0
        , text ^>=2.0.2
        , time ^>=1.12.2
        , uuid ^>=1.3.16
        , wai ^>=3.2.4
        , wai-extra ^>=3.1.15
        , web-inv-route ^>=0.1.3.2

    -- Directories containing source files.
    hs-source-dirs:   app, lib

    -- Base language which the package is written in.
    default-language: Haskell2010

